fixed mobile center align

--- a/src/screens/portfolio/Portfolio.css
+++ b/src/screens/portfolio/Portfolio.css
@@ -5,6 +5,7 @@
   align-items: center;
   gap: var(--gap);
   background-color: var(--dark-accent);
+  flex-wrap: wrap;
 }
 
 .portfolio-container p {
